--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
          <title>Bloc Jams</title>
      </head>
      <body>
-         <div> 
-         </div>
-         <div> 
+         <nav> 
+         </nav>
+         <section> 
              <h1>Bloc Jams</h1>
              <h3>Turn the music up!</h3>
-         </div>
+         </section>
+         <section>
          <div> 
              <div>
                  <h5>Choose your music</h5>
@@ -24,6 +25,6 @@
                  <h5>Mobile enabled</h5>
                  <p>Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
              </div>
-         </div>
+         </section>
      </body>
  </html>
